--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,32 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+</head>
+<body>
+
+<header class="topHeader">
+</header>
+    <div class="mainBody">
+        <div class="boxLeft"></div>
+        <section class="boxCenter">
+            <div class="centerTop"></div>
+            <div class="footer"></div>
+        </section>    
+        <div class="boxRight"></div>
+    </div>
+    
+
+
+
+
+
+
+
+    
+</body>
+</html>
